# dama

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benches.rs
core/: Cargo.toml
core/src/: castling.rs  color.rs  helpers.rs  lib.rs  magic.rs  moves.rs  mv.rs  piece.rs  square.rs  squareset.rs
examples/: perft.rs  playmove.rs
src/: fen.rs  game.rs  helpers.rs  lib.rs  movegen.rs  mv.rs  perft.rs  pgn.rs  position.rs  san.rs  squaresets.rs  uci.rs  zobrist.rs
