[package]
name = "dama"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["core"]

[workspace.dependencies]
enum-map = "2.7.3"
thiserror = "2.0.11"

[build-dependencies]
anyhow = "1.0.95"
dama-core = { path = "core" }

[dependencies]
thiserror = { workspace = true }
enum-map = { workspace = true }
dama-core = { path = "core" }
arrayvec = "0.7.6"
atoi = "2.0.0"

[profile.dev]
opt-level = 1

[dev-dependencies]
rayon = "1.10.0"
criterion = "0.5.1"
anyhow = "1.0.96"

[[bench]]
name = "benches"
harness = false
