[package]
name = "dama"
version = "0.1.0"
edition = "2021"
description = "A general-purpose rust library for standard chess and chess960."
readme = "README.md"
categories = ["games", "parser-implementations", "parsing"]
keywords = ["chess", "chess960", "pgn"]
repository = "https://github.com/pivxta/dama"
license = "MIT"

[workspace]
members = ["core"]

[workspace.dependencies]
enum-map = "2.7.3"
thiserror = "2.0.11"

[build-dependencies]
anyhow = "1.0.95"
dama_core = { path = "core", version = "0.1.0" }

[dependencies]
thiserror = { workspace = true }
enum-map = { workspace = true }
dama_core = { path = "core", version = "0.1.0" }
arrayvec = "0.7.6"
atoi = "2.0.0"

[profile.dev]
opt-level = 1

[profile.bench]
lto = true

[dev-dependencies]
rayon = "1.10.0"
criterion = "0.5.1"
anyhow = "1.0.96"

[[bench]]
name = "benches"
harness = false
