[package]
name = "dama_core"
version = "0.1.0"
edition = "2021"
description = "A dama crate with some core chess types."
readme = "README.md"
categories = ["games"]
keywords = ["chess", "chess960", "pgn"]
repository = "https://github.com/pivxta/dama"
license = "MIT"

[dependencies]
enum-map = { workspace = true }
thiserror = { workspace = true }
bitflags = "2.8.0"
rand = "0.9.0"
rayon = "1.10.0"
